<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_container"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mtv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/hello_blank_fragment" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_delete"
            android:layout_width="39dp"
            android:layout_height="39dp"
            android:layout_marginEnd="12dp"
            android:src="@drawable/ic_delete"
            app:fabCustomSize="39dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/efab_edit"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="gone"
            android:contentDescription="@string/description_delete_task_button" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/efab_delete"
            android:layout_width="wrap_content"
            android:layout_height="39dp"
            android:layout_marginEnd="12dp"
            android:visibility="gone"
            android:text="@string/cta_delete_task"
            android:textSize="12sp"
            app:icon="@drawable/ic_delete"
            app:fabCustomSize="39dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/efab_edit"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible"
            android:contentDescription="@string/description_delete_task_button" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/efab_edit"
            android:layout_width="39dp"
            android:layout_height="39dp"
            android:layout_marginEnd="12dp"
            android:src="@drawable/ic_edit"
            app:fabCustomSize="39dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/description_edit_task_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>